<resources>
    <string name="app_name">Eien System</string>
    <string name="login_brand_name">KIZUNA LOGÍSTICA</string>
    <string name="login_system_title">Eien-System</string>
    <string name="login_label_user">Correo Empresarial o Usuario</string>
    <string name="login_hint_user">ej. usuario@kizuna.com</string>
    <string name="login_label_password">Contraseña</string>
    <string name="login_hint_password">••••••••</string>
    <string name="login_btn_enter">INGRESAR AL SISTEMA</string>
    <string name="login_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_footer_security">Autenticación protegida con JWT / OAuth2</string>
</resources>